Renaming obfuscated methods